fix(.yml): change the name hook_url

--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -53,4 +53,4 @@ jobs:
     steps:
       - name: Notify Render to redeploy
         run: |
-          curl -X POST -d '' "${{ secrets.RENDER_DEPLOY_HOOK }}"
+          curl -X POST -d '' "${{ secrets.RENDER_DEPLOY_HOOK_URL }}"
