--- a/apps/agent-tars/package.json
+++ b/apps/agent-tars/package.json
@@ -53,7 +53,8 @@
     "@computer-use/node-mac-permissions":"2.2.2",
     "@agent-infra/mcp-server-commands":"workspace:*",
     "@agent-infra/mcp-server-filesystem":"workspace:*",
-    "@agent-infra/mcp-server-browser": "workspace:*"
+    "@agent-infra/mcp-server-browser": "workspace:*",
+    "express": "^4.18.2"
   },
 
   "devDependencies": {
