--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -42,6 +42,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
+          build-args: |
+             VITE_OPENAI_API_KEY=${{ secrets.VITE_OPENAI_API_KEY }}
           tags: |
             ghcr.io/${{ github.repository_owner }}/ui-tars:latest
             ghcr.io/${{ github.repository_owner }}/ui-tars:${{ github.sha }}
