--- a/apps/agent-tars/tsconfig.json
+++ b/apps/agent-tars/tsconfig.json
@@ -7,6 +7,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "baseUrl": ".",               
+    "paths": {                    
+      "@renderer/*": ["src/renderer/src/*"],
+      "@vendor/*": ["src/renderer/vendor/*"]
+    }
   }
 }
