--- a/apps/agent-tars/tsconfig.json
+++ b/apps/agent-tars/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",               
     "paths": {                    
       "@renderer/*": ["src/renderer/src/*"],
-      "@vendor/*": ["src/renderer/vendor/*"]
+      "@vendor/*": ["src/vendor/*"]
     }
   }
 }
